samples/_failures_safe/1761600906_738624_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f1b9b32.c: In function ‘main’:
./samples/SAFE/__tmp_5f1b9b32.c:152:33: error: expected ‘)’ at end of input
  152 |                 if (!read_matrix
      |                    ~            ^
      |                                 )
./samples/SAFE/__tmp_5f1b9b32.c:152:17: error: expected declaration or statement at end of input
  152 |                 if (!read_matrix
      |                 ^~
./samples/SAFE/__tmp_5f1b9b32.c:152:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5f1b9b32.c:152:17: error: expected declaration or statement at end of input
